# rag-autoresearch

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: run_experiment.yml
auto_rag_research_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
campaigns/default/: champions.json  failures.md  hypotheses.md  research_log.md
campaigns/default/experiment_store/: exp_1b1293e0.json  exp_2bb1a3f1.json  exp_46f153b7.json  exp_635ac9f9.json  exp_686598a9.json  exp_eb89b864.json
config/: campaign.yaml  metrics.yaml  models.yaml  search_space.yaml
data/benchmarks/: default.jsonl
idea-lifecycle-tracker/: README.md  start.bat  start.sh
idea-lifecycle-tracker/app/: db.py  main.py  repository.py  schemas.py
src/benchmarks/: dataset_loader.py
src/cli/: main.py
src/common/: models.py  scoring.py
src/decision/: decision_engine.py  pareto_front.py
src/evaluation/: evaluator.py
src/llm/: openai_compatible.py
src/memory/: champion_registry.py  experiment_store.py  research_log.py
src/orchestrator/: budget_guard.py  campaign_manager.py  experiment_loop.py  scheduler.py  state_store.py
src/rag/: pipeline.py
src/research/: proposal_engine.py  researcher_agent.py  search_space.py
tests/: test_dataset_loader.py  test_pareto.py  test_pipeline_modes.py  test_scoring.py
