[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-rag-research-platform"
version = "0.1.0"
description = "Autonomous RAG research loop with experiment tracking and keep/discard decisions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
auto-rag = "src.cli.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
